<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/orderReceived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/order_received"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:padding="8dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="26dp"
        />

    <TextView
        android:id="@+id/clientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/orderReceived"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/client_name"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:padding="8dp"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/clientNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/clientName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Avinash Joshi"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginRight="30dp"
        android:padding="8dp"
        />

    <TextView
        android:id="@+id/clientPhoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/clientName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/client_contact"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:padding="8dp"
        android:layout_marginTop="36dp"/>

    <TextView
        android:id="@+id/clientPhoneNoVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/clientPhoneNo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="+91 9876543210"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginRight="30dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/clientAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/clientPhoneNo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/client_address"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:layout_marginTop="36dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/clientAddressVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/clientAddress"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/client_address"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginRight="30dp"
        android:padding="8dp"/>

    <RelativeLayout
        android:id="@+id/sendPicRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@id/clientAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/list_bg">

        <Button
            android:id="@+id/sendPics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_pic"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:padding="8dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_bg" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/stepsSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:padding="8dp"
            android:prompt="@string/spinner_title"
            android:outlineSpotShadowColor="@color/grey"
            />
    </RelativeLayout>


    <ProgressBar
        android:id="@+id/progressIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>


        <TextView
            android:id="@+id/done"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Done"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sendPicRl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="16dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/dark_pink"
            android:layout_marginTop="50dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>